# hallucimap

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: new-probe.md  publish.md  run-atlas.md
.github/workflows/: ci.yml
examples/: scan_claude.py  scan_gpt4o.py
src/hallucimap/: __init__.py  cli.py  testing.py
src/hallucimap/core/: __init__.py  atlas.py  scorer.py  topology.py
src/hallucimap/models/: __init__.py  anthropic_adapter.py  base.py  hf_adapter.py  openai_adapter.py
src/hallucimap/probes/: __init__.py  base.py  domain.py  entity.py  factual.py  temporal.py
src/hallucimap/viz/: __init__.py  heatmap.py
tests/: conftest.py  test_adapters.py  test_atlas.py  test_probes.py  test_scorer.py
